fix(wearable): fix moreoptions handler width and position(P150625-07282)
Previous moreoptions handler has too big width value.
And add example code when user click the indicator.

--- a/tau/src/css/profile/wearable/changeable/common/selector.less
+++ b/tau/src/css/profile/wearable/changeable/common/selector.less
@@ -16,14 +16,12 @@
 			display: block;
 			width: 100%;
 			height: 100%;
-			z-index: 100;
-			.ui-item[data-index] {
+			z-index: 3;
+			.ui-item {
 				visibility: visible;
 				.transition(transform 300ms ease-out);
 			}
 		}
-
-
 		&.ui-layer-hide {
 			.ui-item {
 				visibility: visible;
@@ -35,7 +33,7 @@
 			top: 50%;
 			left: 50%;
 			margin: -28 * @unit_base;
-			z-index: 3;
+			z-index: 2;
 			background-color: @color_selector_layer_sub1_bg;
 		}
 
@@ -44,7 +42,7 @@
 			top: 50%;
 			left: 50%;
 			margin: -28 * @unit_base;
-			z-index: 2;
+			z-index: 1;
 			background-color: @color_selector_layer_sub2_bg;
 		}
 
@@ -53,7 +51,7 @@
 			top: 50%;
 			left: 50%;
 			margin: -28 * @unit_base;
-			z-index: 3;
+			z-index: 2;
 			background-color: @color_selector_layer_sub1_bg;
 		}
 
@@ -62,7 +60,7 @@
 			top: 50%;
 			left: 50%;
 			margin: -28 * @unit_base;
-			z-index: 2;
+			z-index: 1;
 			background-color: @color_selector_layer_sub2_bg;
 		}
 
@@ -76,7 +74,7 @@
 			left: 50%;
 			border-radius: 50%;
 			margin: -28 * @unit_base;
-			z-index: 102;
+			z-index: 100;
 			&:active {
 				background-color: @color_selector_icon_bg_press;
 			}
@@ -94,10 +92,10 @@
 		font-size: 28 * @unit_base;
 	}
 	.ui-selector-indicator {
-		z-index: 2;
+		z-index: 11;
 	}
 	.ui-selector-indicator-arrow {
-		z-index: 1;
+		z-index: 10;
 		&::after {
 			position: absolute;
 			content: "";
