--- a/tau/src/css/profile/wearable/changeable/theme-circle/layout.less
+++ b/tau/src/css/profile/wearable/changeable/theme-circle/layout.less
@@ -49,7 +49,7 @@ body {
 		.ui-more {
 			position: fixed;
 			top: 50%;
-			right: 0;
+			right: -@fixed_header_more_width / 2 * @unit_base;
 			width: @fixed_header_more_width;
 			height: @fixed_header_more_height;
 			transform: translate(0, -50%);
@@ -71,7 +71,6 @@ body {
 				height: 140 * @unit_base;
 				background-color: @color_moreoptions_handler;
 				border-radius: 50%;
-				margin-right: -50%;
 				.transform(scale(0));
 				top: 0;
 				right: 0;
@@ -90,7 +89,7 @@ body {
 				background-color: @color_moreoptions_bg;
 				border-radius: 50%;
 				top: 50%;
-				right: 0;
+				right: 50%;
 				.transform(translate(0, -50%));
 			}
 		}
